JAXB module doesn't exist anymore